--- a/_posts/2021-02-03-dummy2.md
+++ b/_posts/2021-02-03-dummy2.md
@@ -1,26 +1,20 @@
 ---
-title: "깃헙으로 블로그 포스팅하기"
+title: "Tistory로 블로그 이전"
 date: 2021-02-03
 categories:
   - Post
   - GitHub
 ---
 
-_posts 폴더에 .md 파일로 본문을 작성하고 git으로 아래처럼 push해주면된다.
+
+
+아래 주소로 블로그 이전하였습니다.
 
 ```ruby
-cd C:\github\chu-uj.github.io
-git add .
-git commit -m "posting"
-git push
+https://withchu.tistory.com/
 ```
 
 
 
-* git에 레파지토리 로컬 저장소로 내려받는법
 
-  ```
-  C:\github>git clone https://github.com/chu-uj/chu-uj.github.io.git
-  ```
 
-  
